<?xml version="1.0" encoding="utf-8"?>

<!-- This fragment layout is for displaying recipe video and recipe step details -->

<LinearLayout
    android:id="@+id/llayout_step_detail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlayout_player"
        android:layout_width="match_parent"
        android:layout_height="@dimen/media_player_height"
        android:background="@color/colorLatte"
        android:padding="@dimen/activity_margin">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/playerview_recipe_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAlphaBlack"/>

        <ImageView
            android:id="@+id/imageview_no_media"
            android:contentDescription="@string/placeholder_no_media"
            style="@style/StepNoMediaImageView"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/textview_step_desc"
        tools:text="@string/placeholder_step"
        style="@style/StepDescTextView"/>

</LinearLayout>