<?xml version="1.0" encoding="utf-8"?>

<!-- This fragment layout is for displaying recipe ingredients and recipe steps -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin">

        <TextView
            android:id="@+id/textview_ingredients"
            tools:text="@string/label_ingredients"
            style="@style/TextViewIngredient"
            android:background="@color/colorPrimaryDark"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>