<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_recipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_margin"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"/>

    <!-- Empty view for scenario when list has no items -->
    <TextView
        android:id="@+id/textview_empty_list"
        style="@style/TextViewEmptyList"
        tools:text="@string/app_name" />

    <!-- Loading indicator shown before first load -->
    <ProgressBar
        android:id="@+id/progress_indicator"
        style="@style/ProgressBar" />

</RelativeLayout>